# orbis-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  solana_token.py  start.sh
campaign/: admin.py  models.py  serializers.py  services.py  views.py
campaign/migrations/: 0001_initial.py  0002_initial.py
core/: apps.py  urls.py
orbis_ai/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  models.py  serializers.py  services.py  tasks.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
tests/: test_apis_e2e.py  test_image_e2e.py
users/: admin.py  models.py  serializers.py  services.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_wallet_address.py
utils/: s3_utils.py
