[tool.poetry]
name = "ORBIS AI"
version = "0.1.0"
description = "ORBIS AI"
authors = ["RishiGitH"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
djangorestframework = "^3.12"
psycopg2-binary = "^2.9"
redis = "^3.5"
celery = "^5.1"
django-redis = "^5.0"
drf-yasg = "^1.20"
django-celery-beat = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-django = "^4.4"
black = "^21.5b1"
isort = "^5.8"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true